tests/test_files/valid/identifiers.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Location id
    id: "0x4711"
    type: "pallet"
End

Location id_1
    id: "0x4711"
    type: "pallet"
End

Location id1_
    id: "0x4711"
    type: "pallet"
End
